Updated Simplified Chinese translation

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -29,7 +29,7 @@
     <string name="msg_sure">你确定吗?</string>
     <string name="msg_done">完成</string>
     <string name="msg_reboot">设备需要重启</string>
-    <string name="restrict_accounts">账户 (Google, Facebook等等)</string>
+    <string name="restrict_accounts">账户 (Google, Facebook等)</string>
     <string name="restrict_browser">浏览器 (书签/历史)</string>
     <string name="restrict_calendar">日历</string>
     <string name="restrict_calling">通话 (语音, 短信, 彩信)</string>
@@ -37,7 +37,7 @@
     <string name="restrict_dictionary">词典 (用户)</string>
     <string name="restrict_identification">识别码 (设备)</string>
     <string name="restrict_internet">互联网</string>
-    <string name="restrict_isolation">Isolated storage</string>
+    <string name="restrict_isolation">独立存储</string>
     <string name="restrict_location">位置 (精细/粗略)</string>
     <string name="restrict_media">媒体 (声音, 图片, 视频)</string>
     <string name="restrict_messages">信息 (短信, 彩信)</string>
@@ -62,6 +62,6 @@
     <string name="help_internet">表示联网的权限</string>
     <string name="help_granted">表示授予的权限</string>
     <string name="help_used">表示使用的数据</string>
-    <string name="help_dangerous">表示勿轻易勾选</string>
+    <string name="help_dangerous">表示勿轻易限制</string>
 
 </resources>
