--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -1,40 +1,40 @@
 <resources>
 
-    <string name="app_wrongandroid">Δοκιμασμένο μόνο σε έκδόσεις Android 4.0, 4.1 και 4.2</string>
     <string name="app_notxposed" formatted="false">Δεν έχει εγκατασταθεί η έκδοση %d+ του Xposed framework</string>
     <string name="app_notenabled">Το XPrivacy δεν είναι ενεργοποιημένο στο Xposed installer</string>
+    <string name="app_wrongandroid">Δοκιμασμένο μόνο σε έκδόσεις Android 4.0, 4.1 και 4.2</string>
     <string name="app_version" formatted="false">Έκδοση XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Έκδοση Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst (M66B)</string>
     <string name="menu_settings">Ρυθμίσεις</string>
-    <string name="menu_template">Template</string>
+    <string name="menu_template">Πρότυπο</string>
     <string name="menu_update">Έλεγχος για ενημερώσεις</string>
     <string name="menu_report">Αναφορά σφάλματος</string>
     <string name="menu_export">Εξαγωγή</string>
     <string name="menu_import">Εισαγωγή</string>
-    <string name="menu_theme">Switch theme</string>
-    <string name="menu_pro">Pro version</string>
+    <string name="menu_theme">Αλλαγή θέματος</string>
+    <string name="menu_pro">Έκδοση Pro</string>
     <string name="menu_about">Σχετικά</string>
-    <string name="menu_all">All</string>
-    <string name="menu_app_launch">Launch</string>
-    <string name="menu_app_settings">Settings</string>
+    <string name="menu_all">Όλα</string>
+    <string name="menu_app_launch">Εκκίνηση</string>
+    <string name="menu_app_settings">Ρυθμίσεις</string>
     <string name="menu_app_store">Play Store</string>
-    <string name="menu_accounts">Select accounts to allow</string>
-    <string name="menu_contacts">Select contacts to allow</string>
+    <string name="menu_accounts">Επιλογή επιτρεπόμενων λογαριασμών</string>
+    <string name="menu_contacts">Επιλογή επιτρεπόμενων επαφών</string>
     <string name="msg_noupdate">Δεν υπάρχουν διαθέσιμες ενημερώσεις</string>
     <string name="msg_restricted" formatted="false">%s περιορίστικε από το XPrivacy</string>
     <string name="msg_licensed" formatted="false">Άδεια για: %s</string>
-    <string name="msg_loading">Loading</string>
-    <string name="msg_edit">Click the application icon to edit all restrictions</string>
-    <string name="msg_sure">Are you sure?</string>
-    <string name="msg_done">Done</string>
-    <string name="msg_reboot">Reboot required</string>
+    <string name="msg_loading">Φόρτωση</string>
+    <string name="msg_edit">Πιέστε το εικονίδιο της εφαρμογής για επεξεργασία όλων των περιορισμών</string>
+    <string name="msg_sure">Είστε σίγουρος;</string>
+    <string name="msg_done">Τέλος</string>
+    <string name="msg_reboot">Απαιτείται επανεκκίνηση</string>
     <string name="restrict_accounts">Λογαριασμοί (Google, Facebook, κλπ)</string>
     <string name="restrict_browser">Browser (σελιδοδείκτες/ιστορικό)</string>
     <string name="restrict_calendar">Ημερολόγιο</string>
     <string name="restrict_calling">Κλήσεις (τηλέφωνο, SMS, MMS)</string>
     <string name="restrict_contacts">Επαφές</string>
-    <string name="restrict_dictionary">Dictionary (user)</string>
+    <string name="restrict_dictionary">Λεξικό (χρήστη)</string>
     <string name="restrict_identification">Ταυτότητα (συσκευή)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Τοποθεσία (ακριβής/μερική)</string>
@@ -42,25 +42,25 @@
     <string name="restrict_messages">Μηνύματα (SMS, MMS)</string>
     <string name="restrict_network">Δίκτυο (διευθύνσεις)</string>
     <string name="restrict_phone">Τηλέφωνο (στοιχεία, αριθμοί, κλήσεις)</string>
-    <string name="restrict_storage">Storage (media, SD card)</string>
+    <string name="restrict_storage">Αποθ. χώρος (πολυμέσα, κάρτα SD)</string>
     <string name="restrict_shell">Shell (εντολές, superuser)</string>
     <string name="restrict_system">Σύστημα (εγκατεστημένες εφαρμογές)</string>
     <string name="restrict_view">Εμφάνιση (browser)</string>
-    <string name="title_category">Category:</string>
+    <string name="title_category">Κατηγορία:</string>
     <string name="title_restrict">Επιλέξτε για περιορισμό:</string>
     <string name="settings_lat">Γεωγρ. πλάτος</string>
     <string name="settings_lon">Γεωγρ. μήκος</string>
-    <string name="settings_mac">MAC address</string>
-    <string name="settings_phone">Phone number</string>
-    <string name="settings_id">Android ID</string>
-    <string name="settings_country">Country</string>
-    <string name="settings_subscriber">Subscriber ID</string>
-    <string name="settings_fpermission">Filter by permission</string>
-    <string name="settings_fsystem">Filter system applications</string>
+    <string name="settings_mac">Διεύθυνση MAC</string>
+    <string name="settings_phone">Αριθμός τηλεφώνου</string>
+    <string name="settings_id">Αναγνωριστικό android</string>
+    <string name="settings_country">Χώρα</string>
+    <string name="settings_subscriber">Αναγνωριστικό συνδρομητή</string>
+    <string name="settings_fpermission">Φιλτράρισμα ανά άδεια</string>
+    <string name="settings_fsystem">Φιλτράρισμα εφαρμογών συστήματος</string>
     <string name="help_application">Εφαρμογή</string>
     <string name="help_internet">έχει άδεια internet</string>
     <string name="help_granted">έχει άδεια Android</string>
     <string name="help_used">έχει χρησιμοποιήσει αυτά τα δεδομένα</string>
-    <string name="help_dangerous">is dangerous</string>
-    
+    <string name="help_dangerous">είναι επικίνδυνη</string>
+
 </resources>
