--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -33,7 +33,7 @@
     <string name="restrict_browser">דפדפן (מועדפים / היסטוריה)</string>
     <string name="restrict_calendar">יומן</string>
     <string name="restrict_calling">שיחות (טלפון, SMS, MMS)</string>
-    <string name="restrict_contacts">אנשי \'שר</string>
+    <string name="restrict_contacts">אנשי קשר</string>
     <string name="restrict_dictionary">מילון (משתמש)</string>
     <string name="restrict_identification">זיהוי (מכשיר)</string>
     <string name="restrict_internet">אינטרנט</string>
