--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_notxposed" formatted="false">Xposed framework versie %d+ is niet geïnstalleerd</string>
-    <string name="app_notenabled">XPrivacy is niet aangezet in de Xposed installer</string>
+    <string name="app_notenabled">XPrivacy is niet ingeschakeld in de Xposed installer</string>
     <string name="app_wrongandroid">Alleen getest met Android versie 4.0, 4.1 and 4.2</string>
     <string name="app_version" formatted="false">XPrivacy versie: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework versie: %d</string>
@@ -9,9 +9,9 @@
     <string name="menu_settings">Instellingen</string>
     <string name="menu_template">Sjabloon</string>
     <string name="menu_update">Controleer op nieuwe versie</string>
-    <string name="menu_report">Rapporteer probleem</string>
-    <string name="menu_export">Exporteren</string>
-    <string name="menu_import">Importeren</string>
+    <string name="menu_report">Meldt probleem</string>
+    <string name="menu_export">Exporteer</string>
+    <string name="menu_import">Importeer</string>
     <string name="menu_theme">Wissel thema</string>
     <string name="menu_pro">Pro versie</string>
     <string name="menu_about">Over</string>
@@ -19,20 +19,20 @@
     <string name="menu_app_launch">Uitvoeren</string>
     <string name="menu_app_settings">Instellingen</string>
     <string name="menu_app_store">Play Store</string>
-    <string name="menu_accounts">Selecteer accounts</string>
-    <string name="menu_contacts">Selecteer contacten</string>
+    <string name="menu_accounts">Geef accounts toestemming</string>
+    <string name="menu_contacts">Geef contacten toestemming</string>
     <string name="msg_noupdate">Geen nieuwe versie beschikbaar</string>
     <string name="msg_restricted" formatted="false">%s beperkt door XPrivacy</string>
-    <string name="msg_licensed" formatted="false">Gelicenseerd aan: %s</string>
+    <string name="msg_licensed" formatted="false">In licentie gegeven aan: %s</string>
     <string name="msg_loading">Laden</string>
     <string name="msg_edit">Klik op het applicatie pictogram om alle beperkingen te wijzigen</string>
     <string name="msg_sure">Zeker weten?</string>
-    <string name="msg_done">Done</string>
-    <string name="msg_reboot">Herstart nodig</string>
-    <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
-    <string name="restrict_browser">Browser (bladwijzers/geschiedenis)</string>
+    <string name="msg_done">Uitgevoerd</string>
+    <string name="msg_reboot">Opnieuw opstarten noodzakelijk</string>
+    <string name="restrict_accounts">Accounts (Google, Facebook, enz)</string>
+    <string name="restrict_browser">Browser (favorieten/geschiedenis)</string>
     <string name="restrict_calendar">Kalender</string>
-    <string name="restrict_calling">Oproepen (telefoon, SMS, MMS)</string>
+    <string name="restrict_calling">Oproepen (bellen, SMS, MMS)</string>
     <string name="restrict_contacts">Contacten</string>
     <string name="restrict_dictionary">Woordenboek (gebruiker)</string>
     <string name="restrict_identification">Identificatie (apparaat)</string>
@@ -40,16 +40,16 @@
     <string name="restrict_location">Locatie (fijn/grof)</string>
     <string name="restrict_media">Media (audio, foto, video)</string>
     <string name="restrict_messages">Berichten (SMS, MMS)</string>
-    <string name="restrict_network">Netwerk (addressen)</string>
+    <string name="restrict_network">Netwerk (adressen)</string>
     <string name="restrict_phone">Telefoon (ID, nummers, oproepen)</string>
     <string name="restrict_storage">Opslag (media, SD card)</string>
-    <string name="restrict_shell">Shell (commando&#8217;s, superuser)</string>
+    <string name="restrict_shell">Shell (opdrachten, superuser)</string>
     <string name="restrict_system">Systeem (geïnstalleerde apps)</string>
     <string name="restrict_view">Tonen (browser)</string>
     <string name="title_category">Categorie:</string>
-    <string name="title_restrict">Vink om te beperken:</string>
-    <string name="settings_lat">Breedte</string>
-    <string name="settings_lon">Lengte</string>
+    <string name="title_restrict">Vink aan om te beperken:</string>
+    <string name="settings_lat">Breedtegraad</string>
+    <string name="settings_lon">Lengtegraad</string>
     <string name="settings_mac">MAC adres</string>
     <string name="settings_phone">Telefoonnummer</string>
     <string name="settings_id">Android ID</string>
@@ -62,5 +62,5 @@
     <string name="help_granted">heeft Android rechten</string>
     <string name="help_used">heeft deze data gebruikt</string>
     <string name="help_dangerous">is gevaarlijk</string>
-    
+
 </resources>
