--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -19,8 +19,8 @@
     <string name="menu_app_launch">Spustiť</string>
     <string name="menu_app_settings">Nastavenia</string>
     <string name="menu_app_store">Obchod Play</string>
-    <string name="menu_accounts">Vybrať účty na povolenie</string>
-    <string name="menu_contacts">Vybrať kontakty na povolenie</string>
+    <string name="menu_accounts">Povolené účty</string>
+    <string name="menu_contacts">Povolené kontakty</string>
     <string name="msg_noupdate">Nie je k dispozícii žiadna aktualizácia</string>
     <string name="msg_restricted" formatted="false">%s obmedzené pomocou XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencované na: %s</string>
@@ -28,7 +28,7 @@
     <string name="msg_edit">Kliknite na ikonu aplikácie pre úpravu všetkých obmedzení</string>
     <string name="msg_sure">Ste si istý?</string>
     <string name="msg_done">Hotovo</string>
-    <string name="msg_reboot">Reboot required</string>
+    <string name="msg_reboot">Vyžadovaný reštart</string>
     <string name="restrict_accounts">Účty (Google, Facebook, atď.)</string>
     <string name="restrict_browser">Prehliadač (záložky/história)</string>
     <string name="restrict_calendar">Kalendár</string>
