--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,10 +1,10 @@
 <resources>
 
-    <string name="app_notxposed" formatted="false">La version %d+ du cadre d\'applications Xposed n\'est pas installée</string>
+    <string name="app_notxposed" formatted="false">La version %d+ de l\'environnement Xposed n\'est pas installée</string>
     <string name="app_notenabled">XPrivacy n\'est pas activé dans l\'installateur Xposed</string>
     <string name="app_wrongandroid">Testé sous Android version 4.0, 4.1 et 4.2</string>
     <string name="app_version" formatted="false">Version XPrivacy: %s (%d)</string>
-    <string name="app_xversion" formatted="false">Version du cadre d\'application Xposed : %d</string>
+    <string name="app_xversion" formatted="false">Version de l\'environnement Xposed : %d</string>
     <string name="app_copyright">Droits d\'auteur: M. Bokhorst (M66B) \u00A9 2013 </string>
     <string name="menu_settings">Paramètres</string>
     <string name="menu_template">Modèle</string>
