--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -27,8 +27,11 @@
     <string name="msg_loading">Laden</string>
     <string name="msg_edit">Klik op het applicatie pictogram om alle beperkingen te wijzigen</string>
     <string name="msg_sure">Zeker weten?</string>
-    <string name="msg_done">Uitgevoerd</string>
+    <string name="msg_done">Gereed</string>
     <string name="msg_reboot">Opnieuw opstarten noodzakelijk</string>
+    <string name="msg_first"><b>XPrivacy is zorgvuldig ontwikkeld en getest,
+maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke applicatie foutloos werkt.
+\n\nGebruik is geheel op eigen risico.</b>\n\nZie ook de licentie:</string>
     <string name="restrict_accounts">Accounts (Google, Facebook, enz)</string>
     <string name="restrict_browser">Browser (favorieten/geschiedenis)</string>
     <string name="restrict_calendar">Kalender</string>
