--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -29,6 +29,9 @@
     <string name="msg_sure">אתה בטוח?</string>
     <string name="msg_done">בוצע</string>
     <string name="msg_reboot">נדרש אתחול מחדש</string>
+    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
+however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
+\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
     <string name="restrict_accounts">חשבונות (גוגל, פייסבוק, וכו\')</string>
     <string name="restrict_browser">דפדפן (מועדפים / היסטוריה)</string>
     <string name="restrict_calendar">יומן</string>
