--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -29,6 +29,9 @@
     <string name="msg_sure">Biztos benne?</string>
     <string name="msg_done">Kész</string>
     <string name="msg_reboot">Újraindítás szükséges</string>
+    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
+however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
+\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
     <string name="restrict_accounts">Fiókok (Google, Facebook, stb.)</string>
     <string name="restrict_browser">Böngésző (könyvjelzők / előzmények)</string>
     <string name="restrict_calendar">Naptár</string>
