--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -29,6 +29,9 @@
     <string name="msg_sure">Are you sure?</string>
     <string name="msg_done">Done</string>
     <string name="msg_reboot">Reboot required</string>
+    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
+however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
+\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
     <string name="restrict_accounts">Conturi (Google, Facebook, etc)</string>
     <string name="restrict_browser">Browser (semne de carte/istorie)</string>
     <string name="restrict_calendar">Calendar</string>
