--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -29,6 +29,9 @@
     <string name="msg_sure">Are you sure?</string>
     <string name="msg_done">Готово</string>
     <string name="msg_reboot">Reboot required</string>
+    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
+however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
+\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
     <string name="restrict_accounts">Учетные записи (Google, Facebook и т.д.)</string>
     <string name="restrict_browser">Браузер (закладки/история)</string>
     <string name="restrict_calendar">Календарь</string>
