--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -29,6 +29,9 @@
     <string name="msg_sure">Да ли сте сигурни?</string>
     <string name="msg_done">Готово</string>
     <string name="msg_reboot">Потребан ребут</string>
+    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
+however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
+\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
     <string name="restrict_accounts">Налози (Гугл, Фејсбук, итд)</string>
     <string name="restrict_browser">Браузер (букмаркови/историја)</string>
     <string name="restrict_calendar">Календар</string>
